--- a/app/views/rosters/_form.html.erb
+++ b/app/views/rosters/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@roster) do |f| %>
+<%= simple_form_for(@roster) do |f| %>
   <% if @roster.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@roster.errors.count, "error") %> prohibited this roster from being saved:</h2>
@@ -11,14 +11,9 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :school %><br />
-    <%= f.text_field :school %>
-  </div>
-  <div class="field">
-    <%= f.label :year %><br />
-    <%= f.number_field :year %>
-  </div>
+  <%= f.input :school %>
+  <%= f.input :year %>
+
   <div class="actions">
     <%= f.submit %>
   </div>
