--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,10 +1,38 @@
-<h1>Football Roster 0.1b</h1>
 
-<div class="wrapper">
-	<div>
-		<%= link_to 'Players', players_path %>
-	</div>
-	<div>
-		<%= link_to 'Rosters', rosters_path %>
-	</div>
-</div>
+    <div class="navbar-inverse navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container">
+          <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="brand" href="#">Football Roster</a>
+          <div class="nav-collapse collapse">
+            <ul class="nav">
+              <li class="active">
+                <a href="#">Home</a>
+              </li>
+              <li class="active">
+                <a href="#about">About</a>
+              </li>
+              <li class="active">
+                <a href="#contact">Contact</a>
+              </li>
+            </ul>
+          </div>
+          <!--/.nav-collapse -->
+        </div>
+      </div>
+    </div>
+    <div class="wrapper">
+	    <div>
+		    <%= link_to 'Players', players_path %>
+	    </div>
+      <div>
+        <%= link_to 'Rosters', rosters_path %>
+      </div>
+    </div>
+    <div class="footer">
+    </div>
+
