--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,38 +1,38 @@
-
-    <div class="navbar-inverse navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container">
-          <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="brand" href="#">Football Roster</a>
-          <div class="nav-collapse collapse">
-            <ul class="nav">
-              <li class="active">
-                <a href="#">Home</a>
-              </li>
-              <li class="active">
-                <a href="#about">About</a>
-              </li>
-              <li class="active">
-                <a href="#contact">Contact</a>
-              </li>
-            </ul>
-          </div>
-          <!--/.nav-collapse -->
-        </div>
+<div class="navbar navbar-inverse navbar-static-top">
+  <div class="navbar-inner">
+    <div class="container">
+      <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="brand" href="<%= root_path %>">Football Roster</a>
+      <div class="nav-collapse collapse">
+        <ul class="nav">
+          <li class="active">
+          <a href="<%= root_path %>">Home</a>
+          </li>
+          <li>
+            <a href="<%= players_path %>">Players</a>
+          </li>
+          <li>
+            <a href="<%= rosters_path %>">Rosters</a>
+          </li>
+        </ul>
       </div>
+      <!--/.nav-collapse -->
     </div>
-    <div class="wrapper">
-	    <div>
-		    <%= link_to 'Players', players_path %>
-	    </div>
-      <div>
-        <%= link_to 'Rosters', rosters_path %>
-      </div>
+  </div>
+</div>
+<div class="container" style="padding-top: 20px">
+  <div class="row">
+    <div class="span12">
+      <%= link_to 'Players', players_path %>
     </div>
-    <div class="footer">
+    <div class="span12">
+      <%= link_to 'Rosters', rosters_path %>
     </div>
-
+  </div>
+  <div class="footer">
+  </div>
+</div>
