last commit to nested form for now

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,11 @@
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial scale=1.0">
+    <title>Football Roster</title>
+  </head>
+  <body>
     <div class="navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
@@ -35,4 +42,5 @@
     </div>
     <div class="footer">
     </div>
-
+  </body>
+</html>
