--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,35 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+<div class="navbar navbar-inverse navbar-static-top">
+  <div class="navbar-inner">
+    <div class="container">
+      <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="brand" href="<%= root_path %>">Football Roster</a>
+      <div class="nav-collapse collapse">
+        <ul class="nav">
+          <li class="active">
+          <a href="<%= root_path %>">Home</a>
+          </li>
+          <li>
+            <a href="<%= players_path %>">Players</a>
+          </li>
+          <li>
+            <a href="<%= rosters_path %>">Rosters</a>
+          </li>
+        </ul>
+      </div>
+      <form class="navbar-search pull-right">
+        <input type="text" class="search-query" placeholder="Search">
+      </form>
+      <!--/.nav-collapse -->
+    </div>
+  </div>
+</div>
 <%= yield %>
 
 </body>
