player position table created and tweeks made
changed active record migration for player name, and date stamp for player position

also created tests for player eligible_year and ran a test, changing the code for how the eligible years are created in form

--- a/app/assets/stylesheets/forms.css
+++ b/app/assets/stylesheets/forms.css
@@ -17,6 +17,8 @@ div.boolean, .simple_form input[type='submit'] {
 }
 
 div.boolean label, label.collection_radio_buttons {
+  text-align: left;
+  width: auto;
   float: none;
   margin: 0;
 }
