--- a/app/views/players/show.html.erb
+++ b/app/views/players/show.html.erb
@@ -1,6 +1,11 @@
 <p id="notice"><%= notice %></p>
 
 <p>
+  <b>Name:</b>
+  <%= @player.name %>
+</p>
+
+<p>
   <b>Number:</b>
   <%= @player.number %>
 </p>
